Fixed sitebanner on small devices and fixed the background on tablets

--- a/app/styles/components/_section_ready.scss
+++ b/app/styles/components/_section_ready.scss
@@ -5,7 +5,7 @@
   min-height: 500px;
 
   background: url("/images/background/halo_reach.jpg") center top;
-  background-size: 100% auto;
+  background-size: 125% auto;
   background-repeat: no-repeat;
 
   /deep/ {
